--- a/templates/index.html
+++ b/templates/index.html
@@ -2,32 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Recruitment Application</title>
-<!--     <script type="text/javascript" src="sketch.js"></script> -->
+    <title>Economic Stability's Effect on Insurance Policy</title>
+    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="sketch.js"></script>
 
 </head>
 <body>
-    <h1>Recruitment Application</h1>
+    <h1>Economic Stability's Effect on Insurance Policy</h1>
 
     <h2>Gender Income</h2>
     <div id="viz">
         <ul></ul>
     </div>
-
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script>
-
-d3.json("../static/data.json", function(json){
-
-    data = json;
-
-    d3.select("#viz ul")
-        .selectAll("li")
-        .data(json.data)
-        .enter()
-        .append("li")
-        .text(function(d) { return d.gender + " : " + d.income_max + " : " + d.income_avg + " : " + d.income_min; });
-});
-    </script>
+    
 </body>
 </html>
