--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,12 @@
 
 </head>
 <body>
-    <h1>Economic Stability's Effect on Insurance Policy</h1>
+    <h1>Primary Factors Influencing Insurance Segments</h1>
 
-    <h2>Gender Income</h2>
+    <h2>Economic Stability</h2>
     <div id="viz">
         <ul></ul>
     </div>
-    
+
 </body>
 </html>
