--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <title>Economic Stability's Effect on Insurance Policy</title>
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <script type="text/javascript" src="sketch.js"></script>
 
 </head>
 <body>
     <h1>Primary Factors Influencing Insurance Segments</h1>
+    <h2>Customer Insights</h2>
+    
+<div class="container">
+    <div class="image" id="image1"></div>
+    <div class="image" id="image2"></div>
+    <div class="image" id="image3"></div>
+    <div class="image" id="image4"></div>
+    <div class="image" id="image5"></div>
+    <div class="image" id="image6"></div>
+    <div class="image" id="image7"></div>
+    <div class="image" id="image8"></div>
+</div>
 
     <h2>Economic Stability</h2>
     <div id="viz">
