--- a/templates/styles.css
+++ b/templates/styles.css
@@ -28,6 +28,51 @@ h3 {
 	font-size:0.8em;
 }
 
+#landing {
+  height:100vh;
+  background-image: url("../assets/bg.jpg");
+  background-size: 100% auto;
+  background-attachment: fixed;
+  background-repeat:no-repeat;
+  background-position: top left;
+  background-color:grey;
+  background-blend-mode: multiply;
+}
+
+.content {
+	position:absolute;
+	color:white;
+	width:40%;
+	margin:15% 5% 5% 5%;
+}
+
+.content h1 {
+	font-weight:300;
+	font-family: "Georgia", serif;
+	font-size:3em;
+	letter-spacing:0.01em;
+}
+
+.content button {
+	margin:auto;
+	margin-top:2%;
+	color:white;
+	border: 2px solid white;
+	font-size:0.5em;
+	line-height:6em;
+
+}
+
+.content p{
+	letter-spacing:0.04em;
+}
+
+.content button:hover {
+	background-color:white;
+	color:black;
+	border: 2px solid white;
+}
+
 .horizontal-menu{
 	display:inline-block;
 	color:white;
@@ -36,22 +81,41 @@ h3 {
 	width:70%;
 }
 
+.horizontal-menu a {
+	color:white;
+	margin-right:5%;
+}
+
 .horizontal-menu h2 {
 	font-weight:900;
 	cursor:pointer;
 	display:inline-block;
-	margin-right:5%;
 }
 
-.horizontal-menu h2:hover {
+.horizontal-menu a:hover {
 	border-bottom: 2px solid #199CDB;
+}
+
+#small-multiples, #editorial {
+	transition:0.5s ease;
+	opacity:0;
 }
 
 .container {
 	width:100%;
-	padding:8% 5%;
+	padding:0% 5% 3% 5%;
 	z-index:0;
+
 }
+
+.container h2 {
+	margin-top:5%;
+}
+
+#signature-heading {
+	padding: 10% 0% 2% 6%;
+	margin:0%;
+	}
 
 .header {
 	background-color: #002D6E;
@@ -60,7 +124,7 @@ h3 {
 	z-index:1;
 }
 .title {
-	width:25%;
+	width:20%;
 	padding:1%;
 	color:white;
 	display:inline-block;
@@ -79,18 +143,21 @@ h3 {
 }
 
 .logo {
-	width:60%;
+	width:70%;
 	left:0;
-	padding:2% 15%;
+	padding:1% 15%;
 }
 
 #es {
 	padding:5%;
 	background-color: #E7E7E7;
-	height:80vh;
+	height:90vh;
 	transition:0.5s;
 }
 
+#es h2 {
+	margin-top:5%;
+}
 
 .image1, .image2, .image3, .image4, .image5, .image6, .image7, .image8 {
 	position:relative;
@@ -213,12 +280,6 @@ img {
 
 .high {
 	background-color: #04316A;
-	height:10px;
-	display:inline-block;
-}
-
-.unknown {
-	background-color: grey;
 	height:10px;
 	display:inline-block;
 }
@@ -362,6 +423,10 @@ svg {
 	transition:0.5s ease;
 }
 
+circle #Low:hover #section1 {
+	background-color:grey;
+}
+
 .nodetext {
   font-size:0.8em;
   fill:white;
@@ -396,3 +461,174 @@ svg {
 	font-weight:900;
 	color:#002D6E ;
 }
+
+.next {
+	position:absolute;
+	background-color: #002D6E;
+	display:none;
+	left:10%;
+	margin-top:10%;
+	width:80%;
+	height:50%;
+	z-index:100;
+}
+
+.next .content {
+	margin-top:10%;
+	width:100%;
+	text-align:center;
+	margin:auto;
+	padding: 5% 10% 0% 0%;
+}
+
+.next .content h1 {
+	font-size:2em;
+}
+
+.next .content p {
+	font-size:0.8em;
+}
+
+.next .content button {
+	color: #002D6E;
+	background-color: #FBFD53;
+	border: 2px solid #FBFD53;
+}
+
+.next .content button:hover {
+	color: #48B448;
+
+}
+
+close {
+	cursor:pointer;
+	color: white;
+	margin-left:80%;
+	border:2px solid white;
+	padding:0.5% 1.5% 1% 1.5%;
+
+}
+
+close:hover {
+	background-color:white;
+	color: #002D6E;
+}
+
+/*Responsive*/
+
+@media screen and (min-width:1400px) {
+	.overlay3 h1, .overlay6 h1, .overlay7 h1,
+	.overlay8 h1 {
+		width:40%;
+	}
+	.gauge, .gauge2, .gauge3,
+	.gauge4, .gauge5, .gauge6,
+	.gauge7, .gauge8 {
+		margin-top:8%;
+		height:30px;
+	}
+	.low, .medium, .high {
+		height:30px;
+	}
+	.container h3 {
+		line-height:1em;
+		width:100%;
+	}
+
+}
+
+ @media screen and (max-width:1000px) {
+ 	html {
+ 		width:100vh;
+
+ 	}
+ 	#landing {
+ 		background-size: auto 100%;
+ 		background position: center center;
+ 	}
+ 	#landing .content {
+ 		transform: scale(2);
+ 		transform-origin: 0 0;
+ 		padding-left:5%;
+ 	}
+ 	.image1, .image2, .image3, .image4, .image5, .image6, .image7, .image8 {
+		position:relative;
+		width:80%;
+		height:auto;
+		display:inline-block;
+		margin:1%;
+	}
+	.container {
+		overflow-x:scroll;
+		white-space:nowrap;
+		margin-bottom:20%;
+	}
+	.overlay button, .overlay1 button, .overlay2 button, .overlay3 button,
+	.overlay4 button, .overlay5 button, .overlay6 button, .overlay7 button,
+	.overlay8 button {
+		display:block;
+		font-size:3em;
+		margin:15% 30% 0% 35%;
+	}
+	.gauge, .gauge2, .gauge3,
+	.gauge4, .gauge5, .gauge6,
+	.gauge7, .gauge8 {
+		margin-top:10%;
+		height:50px;
+	}
+	.container h2{
+		font-size:3em;
+	}
+	.low, .medium, .high {
+		height:50px;
+	}
+	.details {
+		transform:scale(1.8);
+		transform-origin: 0 0;
+		margin:-20% 0% 20% 2%;
+	}
+	.section1, .section2, .section3 {
+		margin:0;
+		width:20%;
+	}
+	#es button {
+		display:none;
+	}
+	#bob {
+		font-size:2em;
+	}
+	#es {
+		height:auto;
+	}
+	#es h2 {
+		margin-top:15%;
+	}
+	.content {
+		width:50%;
+	}
+	.content button {
+		font-size:1em;
+	}
+	.tooltip {					
+	    padding:1% 2% 6% 2%;
+	}
+	#signature-heading {
+		font-size:3em;
+		width:60%;
+		margin:10% 0% 3% 4%;
+	}
+	.title {
+		width:35%;
+		padding:2% 2% 1% 1%;
+	}
+	.logo {
+		width:100%;
+	}
+	.horizontal-menu {
+		width:50%;
+		padding: 5% 4%;
+	}
+	.horizontal-menu h2 {
+		font-size:1.5em;
+	}
+ 	}
