--- a/docs/styles.css
+++ b/docs/styles.css
@@ -611,6 +611,7 @@ close:hover {
 	}
 	.tooltip {					
 	    padding:1% 2% 6% 2%;
+	    font-size:3em;
 	}
 	#signature-heading {
 		font-size:3em;
@@ -630,5 +631,30 @@ close:hover {
 	}
 	.horizontal-menu h2 {
 		font-size:1.5em;
+	}
+	.next {
+		white-space:pre-line;
+		padding:10%;
+		width:123%;
+		height:70%;
+		margin-top:0%;
+	}
+	.next .content {
+		width:80%;
+		padding:10% 0% 0% 5%;
+	}
+	#next-steps button {
+		font-size:2em;
+		padding: 0% 10% 0% 10%;
+	}
+	close {
+		font-size:3em;
+		padding:0.5% 3% 1% 3%;
+	}
+	.next .content h1 {
+		font-size:4em;
+	}
+	.next .content p {
+		font-size:3em;
 	}
  	}
