--- a/docs/styles.css
+++ b/docs/styles.css
@@ -28,6 +28,39 @@ h3 {
 	font-size:0.8em;
 }
 
+.loading {
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	background-color: white;
+	background-blend-mode: multiply;
+	opacity:1;
+	z-index:200;
+}
+
+.loading h1 {
+	font-family: 'Hind Vadodara', sans-serif;
+	font-size:1em;
+	color:#04316A;
+	margin:auto;
+	margin-top:25%;
+	margin-left:43%;
+	font-weight:900;
+	text-transform:uppercase;
+	letter-spacing:0.5em;
+	animation: pulse 1.5s infinite;
+	transition: 0.5 ease;
+}
+
+/*Pulse animation*/
+@keyframes pulse {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+
 #landing {
   height:100vh;
   background-image: url("https://raw.githubusercontent.com/3milychu/mm-exercise/master/assets/bg.jpg");
@@ -44,6 +77,15 @@ h3 {
 	color:white;
 	width:40%;
 	margin:15% 5% 5% 5%;
+}
+
+.content p a{
+	color:white;
+	text-decoration:none;
+}
+
+.content p a:hover {
+	border-bottom: 2px solid #199CDB;
 }
 
 .content h1 {
@@ -92,15 +134,18 @@ h3 {
 	display:inline-block;
 }
 
-.horizontal-menu a:hover {
+/*.horizontal-menu a:hover {
 	border-bottom: 2px solid #199CDB;
 }
-
+*/
 #small-multiples, #editorial {
 	transition:0.5s ease;
-	opacity:0;
 }
 
+
+.horizontal-menu h2:hover {
+	border-bottom: 2px solid #199CDB;
+}
 .container {
 	width:100%;
 	padding:0% 5% 3% 5%;
@@ -120,7 +165,7 @@ h3 {
 .header {
 	background-color: #002D6E;
 	position:fixed;
-	width:100%;
+/*	width:100%;*/
 	z-index:1;
 }
 .title {
@@ -157,6 +202,16 @@ h3 {
 
 #es h2 {
 	margin-top:5%;
+}
+
+#reclass .content {
+	margin:auto;
+	margin-left:15%;
+	width:70%;
+}
+
+#reclass close {
+	margin-left: 110%;
 }
 
 .image1, .image2, .image3, .image4, .image5, .image6, .image7, .image8 {
@@ -257,9 +312,9 @@ img {
 .gauge, .gauge2, .gauge3,
 .gauge4, .gauge5, .gauge6,
 .gauge7, .gauge8 {
-	margin-top:0%;
+	margin-top:1%;
 	padding-top:0%;
-	height:10px;
+	height:15px;
 	width:70%;
 	margin-left:10%;
 	cursor:pointer;
@@ -268,19 +323,19 @@ img {
 
 .low {
 	background-color:#81BEDB;
-	height:10px;
+	height:15px;
 	display:inline-block;
 }
 
 .medium {
 	background-color:#199CDB;
-	height:10px;
+	height:15px;
 	display:inline-block;
 }
 
 .high {
 	background-color: #04316A;
-	height:10px;
+	height:15px;
 	display:inline-block;
 }
 
@@ -427,6 +482,16 @@ circle #Low:hover #section1 {
 	background-color:grey;
 }
 
+#bob-label {
+	font-family: 'Hind Vadodara', sans-serif;
+	font-weight:400;
+	text-transform:uppercase;
+	letter-spacing:0.1em;
+	font-size:1em;
+	color:white;
+	transition:0.5 ease;
+}
+
 .nodetext {
   font-size:0.8em;
   fill:white;
@@ -540,23 +605,30 @@ close:hover {
  @media screen and (max-width:1000px) {
  	html {
  		width:100vh;
-
+ 		overflow-x:hidden;
+ 	}
+ 	svg {
+ 		margin-top:5%;
+ 		height:auto;
+ 	}
+ 	button {
+ 		font-size:1em;
  	}
  	#landing {
  		background-size: auto 100%;
  		background position: center center;
  	}
  	#landing .content {
- 		transform: scale(2);
- 		transform-origin: 0 0;
  		padding-left:5%;
+ 		padding-top:30%;
+ 		width:80vh;
  	}
  	.image1, .image2, .image3, .image4, .image5, .image6, .image7, .image8 {
 		position:relative;
-		width:80%;
+		width: 80%;
 		height:auto;
-		display:inline-block;
-		margin:1%;
+		display: inline-block;
+		margin: 4%;
 	}
 	.container {
 		overflow-x:scroll;
@@ -567,8 +639,9 @@ close:hover {
 	.overlay4 button, .overlay5 button, .overlay6 button, .overlay7 button,
 	.overlay8 button {
 		display:block;
-		font-size:3em;
-		margin:15% 30% 0% 35%;
+		bottom: 10%;
+		left:5%;
+		position:absolute;
 	}
 	.gauge, .gauge2, .gauge3,
 	.gauge4, .gauge5, .gauge6,
@@ -577,45 +650,65 @@ close:hover {
 		height:50px;
 	}
 	.container h2{
-		font-size:3em;
+		font-size:1.5em;
 	}
 	.low, .medium, .high {
 		height:50px;
 	}
 	.details {
-		transform:scale(1.8);
+		transform:scale(1.2);
 		transform-origin: 0 0;
-		margin:-20% 0% 20% 2%;
 	}
 	.section1, .section2, .section3 {
-		margin:0;
+		margin:3%;
 		width:20%;
 	}
-	#es button {
-		display:none;
+	#es a {
+		text-decoration:none;
 	}
 	#bob {
-		font-size:2em;
+		font-size:1.5em;
 	}
 	#es {
-		height:auto;
+		height:150vh;
 	}
 	#es h2 {
-		margin-top:15%;
+		margin-top:25%;
 	}
 	.content {
 		width:50%;
 	}
-	.content button {
-		font-size:1em;
+	.next .content {
+		width:40%;
+		font-size:1.2em;
+		padding:20%
+		
+	}
+	.next {
+		width:80vh;
+		height:80%;
+		margin-left:0%;
+		margin-top:0%;
+	}
+	.next button {
+		margin-top:15%;
+	}
+	#next-steps {
+		margin-left:5%;
+	}
+
+	#next-steps .content {
+		width:60%;
+		margin-top:-12%;
+		white-space: pre-line;
+		font-size:1.4em;
 	}
 	.tooltip {					
-	    padding:1% 2% 6% 2%;
-	    font-size:3em;
+	    font-size:1.2em;
+	    font-weight:900;
 	}
 	#signature-heading {
-		font-size:3em;
-		width:60%;
+		font-size:1.5em;
 		margin:10% 0% 3% 4%;
 	}
 	.title {
@@ -629,32 +722,34 @@ close:hover {
 		width:50%;
 		padding: 5% 4%;
 	}
-	.horizontal-menu h2 {
-		font-size:1.5em;
-	}
-	.next {
-		white-space:pre-line;
-		padding:10%;
-		width:123%;
-		height:70%;
-		margin-top:0%;
-	}
-	.next .content {
-		width:80%;
-		padding:10% 0% 0% 5%;
-	}
-	#next-steps button {
-		font-size:2em;
-		padding: 0% 10% 0% 10%;
+	.next button {
+		font-size:1em;
+		line-height:2em;
+		padding:4% 10%;
 	}
 	close {
-		font-size:3em;
+		font-size:1em;
 		padding:0.5% 3% 1% 3%;
+		margin-left:100%!important;
 	}
-	.next .content h1 {
-		font-size:4em;
+	#reclass {
+		width:130%;
+		height:80%;
+		padding: 5% 10% 10% 15%;
+		margin-top:60%;
+		font-size:1.2em;
 	}
-	.next .content p {
+	#reclass .content {
+		margin-left: 0%;
+		padding:2% 0% 0% 5%;
+	}
+	.loading {
+		width:100vh;
+		height:200%
+	}
+	.loading h1 {
 		font-size:3em;
+		margin-left:25%;
+		margin-top:70%;
 	}
  	}
