--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,4 +1,4 @@
-body {
+body, html {
 	top:0;
 	left:0;
 	width:100%;
@@ -165,7 +165,7 @@ h3 {
 .header {
 	background-color: #002D6E;
 	position:fixed;
-/*	width:100%;*/
+	width:100%;
 	z-index:1;
 }
 .title {
@@ -608,8 +608,8 @@ close:hover {
  		overflow-x:hidden;
  	}
  	svg {
- 		margin-top:5%;
- 		height:auto;
+ 		margin-top:20%;
+ 		height:30vh;
  	}
  	button {
  		font-size:1em;
