--- a/docs/styles.css
+++ b/docs/styles.css
@@ -695,7 +695,7 @@ close:hover {
 	.overlay button, .overlay1 button, .overlay2 button, .overlay3 button,
 	.overlay4 button, .overlay5 button, .overlay6 button, .overlay7 button,
 	.overlay8 button {
-		padding:15% 30% 0% 35%;
+		margin:15% 30% 0% 35%;
 	}
 
   }
